Tests modified to invoke minified version

--- a/tests/SpecRunner.html
+++ b/tests/SpecRunner.html
@@ -11,7 +11,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jasmine/2.4.1/boot.min.js"></script>
 
   <!-- include source files here... -->
-  <script src="src/sewr.js"></script>
+  <script src="src/sewrjs.min.js"></script>
 
   <!-- include spec files here... -->
   <!--<script src="spec/SpecHelper.js"></script>-->
